--- a/src/scss/Base/tables.scss
+++ b/src/scss/Base/tables.scss
@@ -14,6 +14,28 @@
         padding: 10px;
     }
 
+}
 
+.activityCalendar {
+
+    width: 90%;
+
+    th {
+        border: 1px solid;
+        background-color: #ddd;
+        text-align: left;
+        padding: 10px;
+    }
+
+    td {
+        border: 1px solid;
+        text-align: left;
+        padding: 10px;
+    }
+
+    .today {
+        background-color: skyblue;
+        font-weight: bold;
+    }
 
 }
