--- a/src/scss/Base/tables.scss
+++ b/src/scss/Base/tables.scss
@@ -16,26 +16,40 @@
 
 }
 
+// #pickMonthYear {
+//     padding-bottom: 1em;
+// }
+
 .activityCalendar {
 
+    padding-bottom: 1em;
     width: 90%;
 
     th {
-        border: 1px solid;
-        background-color: #ddd;
+        border: 2px solid;
+        background-color: rgba(221, 221, 221, 0.63);
         text-align: left;
-        padding: 10px;
+        padding: 15px;
     }
 
     td {
         border: 1px solid;
         text-align: left;
-        padding: 10px;
+        padding: 15px;
+        width: 13%;
     }
 
-    .today {
-        background-color: skyblue;
-        font-weight: bold;
+    .eventDayWhole.Day {
+        background-color: #5d729e;
+        color: #ffffff;
+    }
+    .eventDayAM {
+        background-color: #9cbb62;
+    }
+    .eventDayPM {
+        background-color: #ccc050;
     }
 
+
+  
 }
