Fix the disable add button on past dates

--- a/src/scss/Base/buttons.scss
+++ b/src/scss/Base/buttons.scss
@@ -4,10 +4,11 @@
     font-weight: bold;
     border-radius: 75em;
     border: 1px solid;
-
+    cursor: pointer;
 
     &:hover {
-        background-color: rgba(56, 9, 56, 0.2);
-        color: #ffffff;
+        
+        border: 1px solid;
+
     }
 }
