--- a/src/scss/Base/tables.scss
+++ b/src/scss/Base/tables.scss
@@ -49,7 +49,10 @@
     .eventDayPM {
         background-color: #ccc050;
     }
-
+    .fullSlot {
+        background-color: #b61515;
+        color: #ffffff;
+    }
 
   
 }
